# LokiKit

./: .gitignore  Package.swift  README.md  docker-compose.yml  loki-config.yaml
agents/project-analyzer/: README.md  config.yaml  run.py
agents/project-analyzer/lib/: __init__.py  analyzer.py  config.py  daily.py  dashboard_reporter.py  loki_client.py  loki_stats.py  report.py
agents/project-analyzer/reports/: .gitignore
agents/project-analyzer/tests/: test_smoke.py
docs/: onboarding-checklist.md
grafana/dashboards/: voxpocket.json
scripts/: audit-projects.py
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/lokikit/: __init__.py  client.py  handler.py
sdks/python/tests/: test_client.py  test_handler.py
sdks/swift/: .gitignore  Package.swift  README.md
sdks/swift/Sources/LokiKit/: LogLevel.swift  Logger.swift  LokiShipper.swift  LokiTelemetryService.swift  PrintLogger.swift  TelemetryDeckService.swift  TelemetryQueue.swift  TelemetryService+Performance.swift  TelemetryService.swift  VoxPocketTelemetryEventNames.swift
sdks/swift/Tests/LokiKitTests/: PrintLoggerTimestampTests.swift  TelemetryDeckServiceTests.swift  TelemetryPerformanceTests.swift  (+1 more)
sdks/web/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/web/src/: client.ts  index.ts  logger.ts  queue.ts  shipper.ts  types.ts
sdks/web/tests/: client.test.ts  logger.test.ts  queue.test.ts
skills/loki-telemetry-integration/: SKILL.md
stack/: .env.example
stack/grafana/dashboards/: financial.json
(+1 files in other folders)
